--- a/src/App.css
+++ b/src/App.css
@@ -17,6 +17,26 @@
     --seven: black; /* This is the main colour for us */    
 }
 
+.cidak-label {
+  position: fixed;           
+  top: 90%;                     
+  left: 90%;                  
+  transform: translateX(-50%);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 80px;
+  height: 40px;
+  background-color: var(--seven); 
+  color: var(--six);               
+  font-family: 'JetBrains Mono', monospace;
+  font-size: 14px;
+  text-transform: uppercase;
+  z-index: 300;             
+  pointer-events: none;       
+}
+
+
 .app-layout {
   display: flex;
   height: 100vh;
@@ -72,7 +92,7 @@
 
 
 .right-panel {
-  flex: 1.5;
+  flex: 1.4;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -83,8 +103,8 @@
 .ascii-container {
   font-family: 'JetBrains Mono', monospace;
   color: var(--six);
-  font-size: 8px;
-  line-height: 0.8;
+  font-size: 10px;
+  line-height: 1;
   white-space: pre;
   overflow: hidden;
   width: 100%;
@@ -92,13 +112,12 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
-  opacity: 0.8;
+  opacity: 0.6;
 }
 
 .custom-underline {
-  border-bottom: none; /* No underline by default */
-  transition: border-bottom 0.3s ease; /* Smooth transition */
+  border-bottom: none; /* No underline default */
+  transition: border-bottom 0.3s ease; 
 }
 
 .custom-underline:hover {
@@ -119,6 +138,11 @@
 @media (max-width: 768px) {
   .app-layout {
     flex-direction: column;
+  }
+
+  .cidak-label {
+    left: 80%;
+    top: 90%;
   }
   
   .vertical-divider {
@@ -145,6 +169,6 @@
   }
   
   .ascii-container {
-    font-size: 6px;
+    font-size: 8px;
   }
 }
