--- a/src/App.css
+++ b/src/App.css
@@ -32,8 +32,30 @@
   font-family: 'JetBrains Mono', monospace;
   font-size: 14px;
   text-transform: uppercase;
-  z-index: 300;             
-  pointer-events: none;       
+  z-index: 300;   
+  pointer-events: none;               
+}
+
+.about-label {
+  position: fixed;           
+  top: 90%;                     
+  left: 4.5%;                  
+  transform: translateX(-50%);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 80px;
+  height: 40px;
+  background-color: var(--seven); 
+  color: var(--six);               
+  font-family: 'JetBrains Mono', monospace;
+  font-size: 14px;
+  text-transform: uppercase;
+  z-index: 300; 
+}
+
+.about-label:hover {
+  cursor: pointer;
 }
 
 
