--- a/src/App.css
+++ b/src/App.css
@@ -39,7 +39,7 @@
 .about-label {
   position: fixed;           
   top: 90%;                     
-  left: 4.5%;                  
+  left: 8%;                  
   transform: translateX(-50%);
   display: flex;
   justify-content: center;
@@ -58,6 +58,49 @@
   cursor: pointer;
 }
 
+.join-label {
+  position: fixed;           
+  top: 90%;                     
+  left: 14%;                  
+  transform: translateX(-50%);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 80px;
+  height: 40px;
+  background-color: var(--seven); 
+  color: var(--six);               
+  font-family: 'JetBrains Mono', monospace;
+  font-size: 14px;
+  text-transform: uppercase;
+  z-index: 300; 
+}
+
+.join-label:hover {
+  cursor: pointer; 
+}
+
+.home-label {
+  position: fixed;           
+  top: 90%;                     
+  left: 8%;                  
+  transform: translateX(-50%);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 80px;
+  height: 40px;
+  background-color: var(--seven); 
+  color: var(--six);               
+  font-family: 'JetBrains Mono', monospace;
+  font-size: 14px;
+  text-transform: uppercase;
+  z-index: 300;
+}
+
+.home-label:hover {
+  cursor: pointer; 
+}
 
 .app-layout {
   display: flex;
